# marketscan

./: .env.example  .gitignore  CLAUDE.md  DEBUGGING.md  HANDOFF.md  SETUP.md  STATUS.md  SYSTEM_AI.md  load_data.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: backtest_runner.yml  check-pooler.yml  company_profiles.yml  digest.yml  doc_intelligence.yml  fi_insider.yml  insider_trades.yml  ml_retrain.yml  ml_train.yml  options_scan.yml  orchestrator.yml  pipeline.yml  pr-ci.yml  risk_analysis.yml  score_tracker.yml  sector_rotation.yml  signal_analytics.yml  smallcap_scan.yml  smart_alerts.yml  strategy_backtester.yml  universe_discovery.yml  watchlist_alerts.yml
api/: main.py
apps/api/: dependencies.py  main.py  requirements.txt
apps/web/: .env.frontend-prod  (+7 more)
backend_worker/: backtest_runner.py  company_info_fetcher.py  db_loader.py  digest_mailer.py  fi_insider_bulk.py  hrp_optimizer.py  insider_cluster.py  insider_fetcher.py  ml_trainer.py  options_scanner.py  outcome_filler.py  paper_trading.py  portfolio_snapshot.py  price_alert_checker.py  r2_uploader.py  requirements.txt  risk_analyzer.py  score_tracker.py  sector_rotation.py  signal_analytics.py  smallcap_scanner.py  smart_alert_engine.py  strategy_backtester.py  universe_discovery.py  watchlist_alerts.py
docs/: AI_GUIDE.md  CONTRIBUTING.md  FRAMTIDA_PROJEKT.md  MEGAPROJEKT_PLAN.md  NYBORJARE_PRODUKT_ROADMAP.md  PIPELINE_SETUP.md  PROJEKT_DJUPANALYS.md  ROADMAP.md  SYSTEM_AI.md
scripts/: doctor.py  fix_async_handlers.py  seed_demo.py  smoke_test.py
supabase/: seed.sql
(+250 files in other folders)
