[project]
name = "marketscan-api"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "supabase>=2.4",
    "PyJWT>=2.8",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "duckdb>=1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
